--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "dependencies": {
     "axios": "^0.20.0",
     "core-js": "^3.6.5",
+    "firebase": "^7.21.1",
     "moment": "^2.29.0",
     "sweetalert": "^2.1.2",
     "vue": "^2.6.11",
     "vue-moment": "^4.1.0",
     "vue-router": "^3.4.4",
+    "vuefire": "^2.2.4",
     "vuelidate": "^0.7.5"
   },
   "devDependencies": {
